daydream_oasis_front/nohup.out

> daydream_oasis_front@0.0.0 docs:dev /home/admin/daydream_oasis/daydream_oasis_front
> vitepress dev docs --host 0.0.0.0 --port 80

/home/admin/daydream_oasis/daydream_oasis_front/node_modules/vitepress/bin/vitepress.js:2
import('../dist/node/cli.js')
^^^^^^

SyntaxError: Unexpected token import
    at new Script (vm.js:51:7)
    at createScript (vm.js:136:10)
    at Object.runInThisContext (vm.js:197:10)
    at Module._compile (module.js:626:28)
    at Object.Module._extensions..js (module.js:673:10)
    at Module.load (module.js:575:32)
    at tryModuleLoad (module.js:515:12)
    at Function.Module._load (module.js:507:3)
    at Function.Module.runMain (module.js:703:10)
    at startup (bootstrap_node.js:193:16)
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! daydream_oasis_front@0.0.0 docs:dev: `vitepress dev docs --host 0.0.0.0 --port 80`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the daydream_oasis_front@0.0.0 docs:dev script.
npm ERR! This is probably not a problem with npm. There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     /root/.npm/_logs/2023-10-22T13_31_12_948Z-debug.log
